--- a/src/html/404.html
+++ b/src/html/404.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>FastShare</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>Nie znaleziono pliku</div>
+        <font style="color: #ff0000; font-weight: bold;"/>FastShare</font><br />
+        <font style="color: #000000; font-weight: normal;">Nie znaleziono pliku</font>
     </body>
 </html>
