[no commit message]

--- a/src/html/404.html
+++ b/src/html/404.html
@@ -4,8 +4,9 @@
         <title>FastShare</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
-    <body>
-        <font style="color: #ff0000; font-weight: bold;"/>FastShare</font><br />
-        <font style="color: #000000; font-weight: normal;">Nie znaleziono pliku</font>
+    <body style="font-family: Tahoma;">
+        <font style="color: #ff0000; font-weight: bold; font-size: 32px;"/>FastShare</font><br />
+        <hr/>
+        <font style="color: #000000; font-weight: normal; font-size: 18px;">File not found.</font>
     </body>
 </html>
