--- a/src/html/listfiles.html
+++ b/src/html/listfiles.html
@@ -7,6 +7,10 @@
     <body style="font-family: Tahoma;">
         <font style="color: #ff0000; font-weight: bold; font-size: 32px;"/>FastShare</font><br />
         <hr/>
-        <font style="color: #000000; font-weight: normal; font-size: 18px;">Hello, your FastShare instance is running ;)</font>
+        <font style="color: #000000; font-weight: normal; font-size: 18px;">Files under this share:</font><br /><br />
+        <table style="width: 60%;">
+            <tr><td width="75%"><b>File name</b></td><td width="25%"><b></b></td></tr>
+            __filelist__
+        </table>
     </body>
 </html>
